fix: corrige parsing JSON lors de vente de ressources
- Ajout ResourceSaleResponseDto pour réponse structurée
- Modification endpoint pour retourner JSON au lieu de texte
- Mise à jour interface TypeScript ResourceSaleResponse
- Amélioration message utilisateur avec montant de vente

Résout l'erreur "Unexpected token 'R'" lors de la vente